--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
 # mail
 MAIL_HOST=smtp.gmail.com
-MAIL_USER=testing.testing.2k25@gmail.com
-MAIL_PASSWORD=Test123456789T
+MAIL_USER=email@goes.here
+MAIL_PASSWORD=emails_password
 MAIL_FROM=noreply@example.com
-
-# optional
-MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
